--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,7 +7,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Блог о web разработке</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="http://localhost:8080/./assets/css/normalize.css" rel="stylesheet"><link href="http://localhost:8080/./assets/css/styles.blog.css" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="http://localhost:8080/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/normalize.css" rel="stylesheet"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/styles.blog.css" rel="stylesheet"></head>
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
@@ -39,7 +39,7 @@
         </svg>
         <div class="l-developer">
           <div class="c-developer">
-            <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="http://localhost:8080/assets/images/content/photo.jpg"></div>
+            <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
             <div class="c-developer__content">
               <h1 class="c-developer__header">Volkova Yuliya</h1>
               <h2 class="c-developer__desc">Личный сайт веб разработчика</h2>
@@ -79,5 +79,5 @@
         </nav>
       </div>
     </div>
-  <script type="text/javascript" src="http://localhost:8080/app/blog.bundle.js"></script></body>
+  <script type="text/javascript" src="https://yuliyavolkova.github.io/portfolio_pages/app/blog.bundle.js"></script></body>
 </html>
