--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>.svg-use,.svg_next{max-width: 2rem;}</style>
     <title>Блог о web разработке</title>
   <link rel="icon" type="image/png" sizes="32x32" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="https://yuliyavolkova.github.io/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/normalize.css" rel="stylesheet"><link href="https://yuliyavolkova.github.io/portfolio_pages/./assets/css/styles.blog.css" rel="stylesheet"></head>
   <body>
