0006.welcome_page_plus_header_plus_section_about

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,21 +12,21 @@
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
-      <section class="l-section l-section_header l-section_header-blog">
-        <ul class="c-header-social">
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+      <header class="l-section l-header l-header_blog">
+        <ul class="l-header__social">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#vk">
                   <title>vk</title>
                 </use>
               </svg></a></li>
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#github">
                   <title>github</title>
                 </use>
               </svg></a></li>
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#in">
                   <title>in</title>
@@ -38,43 +38,36 @@
             <title>blog_header</title>
           </use>
         </svg>
-        <div class="l-developer l-developer_blog">
+        <div class="l-header__develop l-header__develop_blog">
           <div class="c-developer">
             <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
             <div class="c-developer__content">
-              <div class="c-develop__header-blog">
-                <svg class="svg_develop">
+              <div class="c-develop_blog-header">
+                <svg class="svg_dash">
                   <use xlink:href="../assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
-                <h1 class="c-developer__header c-developer__header_blog">блог</h1>
-                <svg class="svg_develop">
+                <h1 class="h-title-section h-title-section_color">блог</h1>
+                <svg class="svg_dash">
                   <use xlink:href="../assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
               </div>
-              <h2 class="c-developer__desc c-developer__desc-blog">Статьи, которые я написал</h2>
+              <h2 class="c-developer__desc c-developer__desc_blog">Статьи, которые я написал</h2>
             </div>
           </div>
         </div>
-      </section>
-      <section class="l-section l-section_content l-section_content-blog">
-        <div class="l-bg-about l-bg-about_blog">
-          <svg class="svg_aboutLeft">
-            <use xlink:href="../assets/images/sprites/sprite.svg#about_bg_left">
-              <title>about_bg_left</title>
-            </use>
-          </svg>
-          <svg class="svg_aboutRight">
-            <use xlink:href="../assets/images/sprites/sprite.svg#about_bg_right">
-              <title>about_bg_right</title>
+        <div class="l-header__bottom l-header__bottom_blog">
+          <svg class="svg_header-bottom">
+            <use xlink:href="../assets/images/sprites/sprite.svg#bg">
+              <title>bg</title>
             </use>
           </svg>
         </div>
-      </section>
-      <section class="l-section l-section_footer l-section_footer-blog">
+      </header>
+      <section class="l-section l-footer l-footer_blog">
       </section>
       <div class="l-hamburger">
         <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
