--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         <div class="c-welcome">
           <div class="c-welcome__img-wrap" style="background-image: url('./assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
           <div class="c-welcome__content">
-            <h1 class="c-welcome__header">Volkova Yuliya</h1>
+            <h1 class="c-welcome__header">Yuliya Volkova</h1>
             <h2 class="c-welcome__desc">Личный сайт WEB Разработчика</h2>
-            <ul class="c-welcome-social">
-              <li class="c-welcome-social__item"><a class="c-welcome-social__link" href="#" target="blank">
+            <ul class="c-welcome__social">
+              <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="#" target="blank">
                   <svg class="svg-use">
                     <use xlink:href="./assets/images/sprites/sprite.svg#vk">
                       <title>vk</title>
                     </use>
                   </svg></a></li>
-              <li class="c-welcome-social__item"><a class="c-welcome-social__link" href="#" target="blank">
+              <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="#" target="blank">
                   <svg class="svg-use">
                     <use xlink:href="./assets/images/sprites/sprite.svg#github">
                       <title>github</title>
                     </use>
                   </svg></a></li>
-              <li class="c-welcome-social__item"><a class="c-welcome-social__link" href="#" target="blank">
+              <li class="c-welcome__social-item"><a class="c-welcome__social-link" href="#" target="blank">
                   <svg class="svg-use">
                     <use xlink:href="./assets/images/sprites/sprite.svg#in">
                       <title>in</title>
