--- a/pages/my_works.html
+++ b/pages/my_works.html
@@ -12,21 +12,21 @@
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
-      <section class="l-section l-section_header">
-        <ul class="c-header-social">
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+      <header class="l-section l-header">
+        <ul class="l-header__social">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#vk">
                   <title>vk</title>
                 </use>
               </svg></a></li>
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#github">
                   <title>github</title>
                 </use>
               </svg></a></li>
-          <li class="c-header-social__item"><a class="c-header-social__link" href="#" target="blank">
+          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#in">
                   <title>in</title>
@@ -38,11 +38,11 @@
             <title>portfolio_header</title>
           </use>
         </svg>
-        <div class="l-developer">
+        <div class="l-header__develop">
           <div class="c-developer">
             <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
             <div class="c-developer__content">
-              <h1 class="c-developer__header">Volkova Yuliya</h1>
+              <h1 class="c-developer__header">Yuliya Volkova</h1>
               <h2 class="c-developer__desc">Личный сайт WEB Разработчика</h2>
             </div>
           </div>
@@ -52,22 +52,15 @@
               <title>arrow_down</title>
             </use>
           </svg></a>
-      </section>
-      <section class="l-section l-section_content">
-        <div class="l-bg-about">
-          <svg class="svg_aboutLeft">
-            <use xlink:href="../assets/images/sprites/sprite.svg#about_bg_left">
-              <title>about_bg_left</title>
-            </use>
-          </svg>
-          <svg class="svg_aboutRight">
-            <use xlink:href="../assets/images/sprites/sprite.svg#about_bg_right">
-              <title>about_bg_right</title>
+        <div class="l-header__bottom">
+          <svg class="svg_header-bottom">
+            <use xlink:href="../assets/images/sprites/sprite.svg#bg">
+              <title>bg</title>
             </use>
           </svg>
         </div>
-      </section>
-      <section class="l-section l-section_footer">
+      </header>
+      <section class="l-section l-footer">
       </section>
       <div class="l-hamburger">
         <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
