--- a/pages/about.html
+++ b/pages/about.html
@@ -12,33 +12,33 @@
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper">
-      <header class="l-section l-header">
-        <ul class="l-header__social">
-          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
+      <section class="l-section l-hero">
+        <ul class="l-hero__social">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#vk">
                   <title>vk</title>
                 </use>
               </svg></a></li>
-          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#github">
                   <title>github</title>
                 </use>
               </svg></a></li>
-          <li class="l-header__social-item"><a class="l-header__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#in">
                   <title>in</title>
                 </use>
               </svg></a></li>
         </ul>
-        <svg class="svg_header">
+        <svg class="svg_hero">
           <use xlink:href="../assets/images/sprites/sprite.svg#portfolio_header">
             <title>portfolio_header</title>
           </use>
         </svg>
-        <div class="l-header__develop">
+        <div class="l-hero__develop">
           <div class="c-developer">
             <div class="c-developer__img-wrap" style="background-image: url('../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg"></div>
             <div class="c-developer__content">
@@ -52,8 +52,8 @@
               <title>arrow_down</title>
             </use>
           </svg></a>
-        <div class="l-header__bottom">
-          <svg class="svg_header-bottom">
+        <div class="l-hero__bottom">
+          <svg class="svg_hero-bottom">
             <use xlink:href="../assets/images/sprites/sprite.svg#bg">
               <title>bg</title>
             </use>
@@ -120,18 +120,57 @@
                   <ul class="c-skills-card__container"></ul>
                 </div>
               </div>
+              <div class="l-section l-last">
+                <div class="l-map-container"></div>
+                <footer class="l-footer">
+                  <div class="l-footer__left">
+                    <ul class="c-nav__list">
+                      <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="#">обо мне</a></li>
+                      <li class="c-nav__item"><a class="c-nav__link" href="#login">авторизация</a></li>
+                    </ul>
+                    <div class="c-footer__text">Я веб-разработчик из Новосибирска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.</div>
+                  </div>
+                  <div class="l-footer__right">
+                    <ul class="l-footer__social">
+                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
+                          <svg class="svg-use">
+                            <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                              <title>vk</title>
+                            </use>
+                          </svg></a></li>
+                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
+                          <svg class="svg-use">
+                            <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                              <title>github</title>
+                            </use>
+                          </svg></a></li>
+                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
+                          <svg class="svg-use">
+                            <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                              <title>in</title>
+                            </use>
+                          </svg></a></li>
+                    </ul>
+                    <ul class="c-copy c-copy_footer">
+                      <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+                      <li class="c-copy_item">создано в &laquo;&nbsp;LoftSchool&nbsp;&raquo;</li>
+                      <li class="c-copy_item">2018</li>
+                    </ul>
+                  </div>
+                </footer>
+              </div>
             </div>
           </div>
         </div>
-      </header>
-      <section class="l-section l-footer">
       </section>
       <div class="l-hamburger">
         <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
           <ul class="c-hamburger-nav__list visually-hidden">
-            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#my_works">мои работы</a></li>
-            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#blog">блог</a></li>
-            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#about">обо мне</a></li>
+            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="./my_works.html">мои работы</a></li>
+            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="./blog.html">блог</a></li>
+            <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#">обо мне</a></li>
             <li class="c-hamburger-nav__item"><a class="c-hamburger-nav__link" href="#login">авторизация</a></li>
           </ul>
         </nav>
