--- a/pages/about.html
+++ b/pages/about.html
@@ -14,19 +14,19 @@
     <div class="l-wrapper">
       <section class="l-section l-hero">
         <ul class="l-hero__social">
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#vk">
                   <title>vk</title>
                 </use>
               </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#github">
                   <title>github</title>
                 </use>
               </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#in">
                   <title>in</title>
@@ -52,117 +52,164 @@
               <title>arrow_down</title>
             </use>
           </svg></a>
-        <div class="l-hero__bottom">
-          <svg class="svg_hero-bottom">
+      </section>
+      <section class="l-section l-main">
+        <div class="l-main__top">
+          <svg class="svg_main-top">
             <use xlink:href="../assets/images/sprites/sprite.svg#bg">
               <title>bg</title>
             </use>
           </svg>
-          <div class="l-content__wrapper">
-            <div class="l-content__column-one">
-              <svg class="svg_about">
-                <use xlink:href="../assets/images/sprites/sprite.svg#about_header">
-                  <title>about_header</title>
-                </use>
-              </svg>
-            </div>
-            <div class="l-content__column-two"></div>
-            <div class="l-content__inner">
-              <div class="l-content__inner-column-one">
-                <div class="c-about-card">
-                  <div class="c-about-card__header">
-                    <svg class="svg_dash">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                        <title>dash</title>
-                      </use>
-                    </svg>
-                    <h2 class="h-title-section">обо мне</h2>
-                    <svg class="svg_dash">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                        <title>dash</title>
-                      </use>
-                    </svg>
-                  </div><img class="c-about-card__img" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg">
-                  <div class="c-about-card__content">
-                    <div class="c-about-card__content-header">
-                      <svg class="svg_dash">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                          <title>dash</title>
-                        </use>
-                      </svg>
-                      <h3 class="h-title-article">Кто я</h3>
-                      <svg class="svg_dash">
-                        <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                          <title>dash</title>
-                        </use>
-                      </svg>
-                    </div>
-                    <div class="c-about-card__content-text">Я веб разработчик из Санкт-Петербурга. Мне 38 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты. Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!</div>
-                  </div>
+        </div>
+        <div class="l-main__wrapper">
+          <div class="l-main__column-one">
+            <div class="c-about-card">
+              <div class="c-about-card__header">
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+                <h2 class="h-title-section">обо мне</h2>
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+                <svg class="svg_about">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#about_header">
+                    <title>about_header</title>
+                  </use>
+                </svg>
+              </div><img class="c-about-card__img" alt="" src="https://yuliyavolkova.github.io/portfolio_pages/assets/images/content/photo.jpg">
+              <div class="c-about-card__content">
+                <div class="c-about-card__content-header">
+                  <svg class="svg_dash">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                      <title>dash</title>
+                    </use>
+                  </svg>
+                  <h3 class="h-title-article">Кто я</h3>
+                  <svg class="svg_dash">
+                    <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                      <title>dash</title>
+                    </use>
+                  </svg>
                 </div>
-              </div>
-              <div class="l-content__inner-column-two">
-                <div class="c-skills-card">
-                  <div class="c-skills-card__header">
-                    <svg class="svg_dash">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                        <title>dash</title>
-                      </use>
-                    </svg>
-                    <h3 class="h-title-article">Чем я могу быть вам полезен</h3>
-                    <svg class="svg_dash">
-                      <use xlink:href="../assets/images/sprites/sprite.svg#dash">
-                        <title>dash</title>
-                      </use>
-                    </svg>
-                  </div>
-                  <div class="c-skills-card__desc">Больше всего меня привлекает Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.</div>
-                  <ul class="c-skills-card__container"></ul>
-                </div>
-              </div>
-              <div class="l-section l-last">
-                <div class="l-map-container"></div>
-                <footer class="l-footer">
-                  <div class="l-footer__left">
-                    <ul class="c-nav__list">
-                      <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="#">обо мне</a></li>
-                      <li class="c-nav__item"><a class="c-nav__link" href="#login">авторизация</a></li>
-                    </ul>
-                    <div class="c-footer__text">Я веб-разработчик из Новосибирска, и этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.</div>
-                  </div>
-                  <div class="l-footer__right">
-                    <ul class="l-footer__social">
-                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
-                          <svg class="svg-use">
-                            <use xlink:href="../assets/images/sprites/sprite.svg#vk">
-                              <title>vk</title>
-                            </use>
-                          </svg></a></li>
-                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
-                          <svg class="svg-use">
-                            <use xlink:href="../assets/images/sprites/sprite.svg#github">
-                              <title>github</title>
-                            </use>
-                          </svg></a></li>
-                      <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="blank">
-                          <svg class="svg-use">
-                            <use xlink:href="../assets/images/sprites/sprite.svg#in">
-                              <title>in</title>
-                            </use>
-                          </svg></a></li>
-                    </ul>
-                    <ul class="c-copy c-copy_footer">
-                      <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
-                      <li class="c-copy_item">создано в &laquo;&nbsp;LoftSchool&nbsp;&raquo;</li>
-                      <li class="c-copy_item">2018</li>
-                    </ul>
-                  </div>
-                </footer>
+                <div class="c-about-card__content-text"><span>Я веб разработчик из Санкт-Петербурга. Мне 38 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты. Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!</span></div>
               </div>
             </div>
           </div>
+          <div class="l-main__column-two">
+            <div class="l-main__column-two-bg"></div>
+            <div class="c-skills-card">
+              <div class="c-skills-card__header">
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+                <h3 class="h-title-article">Чем я могу быть вам полезен</h3>
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+              </div>
+              <div class="c-skills-card__desc"><span>Больше всего меня привлекает Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.</span></div>
+              <ul class="c-skills-card__container"></ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="l-section l-last">
+        <div class="l-map-container"></div>
+        <div class="l-layout-first">
+          <div class="l-contacts">
+            <div class="c-contacts">
+              <div class="c-contacts__header">
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+                <h3 class="h-title-article">Контакты</h3>
+                <svg class="svg_dash">
+                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                    <title>dash</title>
+                  </use>
+                </svg>
+              </div>
+              <div class="c-contacts__content">
+                <ul class="c-contacts__list">
+                  <li class="c-contacts__row"><a class="c-contacts__link" href="skype:yuliyawolf?add" target="_blank">
+                      <svg class="svg_skype">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#skype">
+                          <title>skype</title>
+                        </use>
+                      </svg><span>skype_kdn</span></a></li>
+                  <li class="c-contacts__row"><a class="c-contacts__link" href="mailto:someone@example.com" target="_blank">
+                      <svg class="svg_mail">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#mail">
+                          <title>mail</title>
+                        </use>
+                      </svg><span>astachov@gmail.com</span></a></li>
+                  <li class="c-contacts__row"><a class="c-contacts__link" href="tel:+7-800-000-392-10" target="_blank">
+                      <svg class="svg_phone">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#phone">
+                          <title>phone</title>
+                        </use>
+                      </svg><span>+7-800-000-392-10</span></a></li>
+                  <li class="c-contacts__row"><a class="c-contacts__link" href="https://www.google.com/maps/search/?api=1&amp;query=36.26577,-92.54324" target="_blank">
+                      <svg class="svg_map-marker">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#map_marker">
+                          <title>map_marker</title>
+                        </use>
+                      </svg><span>г.Новосибирск, ул. Инская, д. 5</span></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <footer class="l-footer">
+            <div class="l-container">
+              <div class="l-footer__left">
+                <ul class="c-nav__list">
+                  <li class="c-nav__item"><a class="c-nav__link" href="./my_works.html">мои работы</a></li>
+                  <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
+                  <li class="c-nav__item"><a class="c-nav__link" href="#">обо мне</a></li>
+                  <li class="c-nav__item"><a class="c-nav__link" href="#login">авторизация</a></li>
+                </ul>
+                <div class="c-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
+              </div>
+              <div class="l-footer__right">
+                <ul class="l-footer__social">
+                  <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                      <svg class="svg-use">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                          <title>vk</title>
+                        </use>
+                      </svg></a></li>
+                  <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                      <svg class="svg-use">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                          <title>github</title>
+                        </use>
+                      </svg></a></li>
+                  <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                      <svg class="svg-use">
+                        <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                          <title>in</title>
+                        </use>
+                      </svg></a></li>
+                </ul>
+                <ul class="c-copy c-copy_footer">
+                  <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+                  <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
+                  <li class="c-copy_item">2018</li>
+                </ul>
+              </div>
+            </div>
+          </footer>
         </div>
       </section>
       <div class="l-hamburger">
