--- a/pages/my_works.html
+++ b/pages/my_works.html
@@ -14,19 +14,19 @@
     <div class="l-wrapper">
       <section class="l-section l-hero">
         <ul class="l-hero__social">
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#vk">
                   <title>vk</title>
                 </use>
               </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#github">
                   <title>github</title>
                 </use>
               </svg></a></li>
-          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="blank">
+          <li class="l-hero__social-item"><a class="l-hero__social-link" href="#" target="_blank">
               <svg class="svg-use">
                 <use xlink:href="../assets/images/sprites/sprite.svg#in">
                   <title>in</title>
@@ -52,15 +52,64 @@
               <title>arrow_down</title>
             </use>
           </svg></a>
-        <div class="l-hero__bottom">
-          <svg class="svg_hero-bottom">
+      </section>
+      <section class="l-section l-main">
+        <div class="l-main__top">
+          <svg class="svg_main-top">
             <use xlink:href="../assets/images/sprites/sprite.svg#bg">
               <title>bg</title>
             </use>
           </svg>
         </div>
+        <div class="l-main__wrapper">
+          <div class="l-main__column-one"></div>
+          <div class="l-main__column-two">
+            <div class="l-main__column-two-bg"></div>
+          </div>
+        </div>
       </section>
       <section class="l-section l-last">
+        <div class="l-map-container"></div>
+        <footer class="l-footer">
+          <div class="l-container">
+            <div class="l-footer__left">
+              <ul class="c-nav__list">
+                <li class="c-nav__item"><a class="c-nav__link" href="#">мои работы</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="./blog.html">блог</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="./about.html">обо мне</a></li>
+                <li class="c-nav__item"><a class="c-nav__link" href="#login">авторизация</a></li>
+              </ul>
+              <div class="c-footer__text"><span>Я веб-разработчик из Санкт-Петербурга, и этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool.</span></div>
+            </div>
+            <div class="l-footer__right">
+              <ul class="l-footer__social">
+                <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                    <svg class="svg-use">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#vk">
+                        <title>vk</title>
+                      </use>
+                    </svg></a></li>
+                <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                    <svg class="svg-use">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#github">
+                        <title>github</title>
+                      </use>
+                    </svg></a></li>
+                <li class="l-footer__social-item"><a class="l-footer__social-link" href="#" target="_blank">
+                    <svg class="svg-use">
+                      <use xlink:href="../assets/images/sprites/sprite.svg#in">
+                        <title>in</title>
+                      </use>
+                    </svg></a></li>
+              </ul>
+              <ul class="c-copy c-copy_footer">
+                <li class="c-copy_item">&copy;&nbsp;Yuliya Volkova</li>
+                <li class="c-copy_item">создано в &laquo;&nbsp;<a href="https://loftschool.com/" target="_blank">LoftSchool</a>&nbsp;&raquo;</li>
+                <li class="c-copy_item">2018</li>
+              </ul>
+            </div>
+          </div>
+        </footer>
       </section>
       <div class="l-hamburger">
         <nav class="c-hamburger-nav"><a class="c-hamburger-nav__target" href=""><span class="c-hamburger-nav__fake"></span></a>
