--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <div class="c-login">
               <div class="c-login__header">
                 <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
                 <h3 class="h-title-article">Авторизуйтесь</h3>
                 <svg class="svg_dash">
-                  <use xlink:href="../assets/images/sprites/sprite.svg#dash">
+                  <use xlink:href="./assets/images/sprites/sprite.svg#dash">
                     <title>dash</title>
                   </use>
                 </svg>
@@ -74,7 +74,7 @@
                   <div class="c-form__row">
                     <label class="c-form__item"><span class="c-form__item-logo">
                         <svg class="svg_login">
-                          <use xlink:href="../assets/images/sprites/sprite.svg#login">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#login">
                             <title>login</title>
                           </use>
                         </svg></span>
@@ -84,7 +84,7 @@
                   <div class="c-form__row">
                     <label class="c-form__item"><span class="c-form__item-logo">
                         <svg class="svg_login">
-                          <use xlink:href="../assets/images/sprites/sprite.svg#password">
+                          <use xlink:href="./assets/images/sprites/sprite.svg#password">
                             <title>password</title>
                           </use>
                         </svg></span>
